# code-preflight

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
examples/rag-ingest/: main.py  requirements.txt
examples/sample_batch_app/: .env  main.py  requirements.txt
examples/sample_batch_app/data/: customers.csv  customers_v2.csv
src/la_analyzer/: __init__.py  cli.py  scanner.py  utils.py
src/la_analyzer/analyzer/: __init__.py  api_scan.py  call_graph.py  deps_scan.py  description_scan.py  egress_scan.py  entrypoint.py  io_scan.py  manifest_generator.py  models.py  notebook_scan.py  porting_plan.py  projection.py  prompt_surface.py  secrets_scan.py  service.py  services.py  state_flow.py  tool_registration.py
src/la_analyzer/ir/: __init__.py  abstract_values.py  capability_registry.py  graph.py  nodes.py  python_frontend.py  queries.py
src/la_analyzer/ir/adapters/: fastapi.py  langgraph.py
src/la_analyzer/render/: _helpers.py  markdown.py  pdf.py
src/la_analyzer/schemas/: manifest.py
src/la_analyzer/security/: __init__.py  agent_scan.py  code_scan.py  credential_leak.py  data_classify.py  data_flow.py  models.py  resource_score.py  vuln_scan.py
tests/: test_agent_scan.py  test_api_scan.py  test_call_graph.py  test_capability_registry.py  test_deps_scan.py  test_egress_scan.py  test_entrypoint.py  test_integration.py  test_io_scan.py  test_ir_abstract_values.py  test_ir_graph.py  test_ir_python_frontend.py  test_ir_queries.py  test_prompt_surface.py  test_render.py  test_secrets_scan.py  test_security.py  test_state_flow.py  test_tool_registration.py
