[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "la-analyzer"
version = "0.1.0"
description = "Static analysis and security scanner for Python projects"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
pdf = [
    "markdown>=3.5",
    "weasyprint>=60",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
la-scan = "la_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
